--- a/java.html
+++ b/java.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-   <script src="print.js">
+   <script>
+    let name =" uyigue uyioghosa precious";
+    let height=5;
+    let country="Nigeria"
+    alert("my name is " + name);
+    alert("i am " + height +"feet tall");
+    alert("i am from " + country)
+   
+
    </script>
 
 </body>
